--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&display=swap"
         rel="stylesheet">
-    <title>Qucik Home</title>
+    <title>Quick Home</title>
 </head>
 
 <body>
